--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>trial1</title>
+	<title>KeyboardAnimation</title>
 	 <link rel = "stylesheet" type="text/css" href="circles.css">
      <script type="text/javascript" src="paper-full.js"></script>
      <script type="text/javascript" src=" https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.3/howler.core.min.js"></script>
